プラグインのボタン実行処理を修正

--- a/WorkablePlugin/Makefile
+++ b/WorkablePlugin/Makefile
@@ -3,7 +3,7 @@ BUILD_TARGET = *.php config.json src/
 
 .PHONY: all
 all: clean
-	zip --exclude $(EXCLUDE_TARGET) -r $(ZIPFILE) $(BUILD_TARGET)
+	zip -r $(ZIPFILE) $(BUILD_TARGET)
 
 .PHONY: clean
 clean:
