--- a/WorkablePlugin/config.json
+++ b/WorkablePlugin/config.json
@@ -4,10 +4,10 @@
     "plugin_view_name": "Sync Workable Candidate",
     "description": "Workableの候補者データを同期する",
     "author": "Yui Hayama",
-    "version": "1.0.0",
-    "plugin_type": "batch,trigger",
+    "version": "1.1.0",
+    "plugin_type": "batch,button",
     "event_triggers": "grid_menubutton",
     "label": "WorkableSync",
     "icon": "fa-database",
-    "batch_cron": "0 9 * * *"
+    "batch_cron": "0 */1 * * *"
 }
