--- a/SoftdeletePlugin/config.json
+++ b/SoftdeletePlugin/config.json
@@ -5,7 +5,7 @@
     "description": "データを論理削除します",
     "author": "Yui Hayama",
     "version": "1.0.0",
-    "plugin_type": "trigger",
+    "plugin_type": "button",
     "event_triggers": "grid_menubutton",
     "label": "SoftdeleteData"
 }
