--- a/AccountSyncPlugin/config.json
+++ b/AccountSyncPlugin/config.json
@@ -3,7 +3,7 @@
     "plugin_name": "AccountSync",
     "plugin_view_name": "AccountSync",
     "description": "Slackのユーザを取り込みます",
-    "author": "Yui Hayama",
+    "author": "Y-Hayama",
     "version": "1.0.0",
     "plugin_type": "batch,button",
     "event_triggers": "grid_menubutton",
