--- a/HarddeletePlugin/config.json
+++ b/HarddeletePlugin/config.json
@@ -3,7 +3,7 @@
     "plugin_name": "HarddeleteData",
     "plugin_view_name": "データの物理削除",
     "description": "論理削除しているすべてのデータを、完全に削除します。",
-    "author": "Yui Hayama",
+    "author": "Y-Hayama",
     "version": "1.0.0",
     "plugin_type": "button",
     "event_triggers": "grid_menubutton",
