--- a/SoftdeletePlugin/config.json
+++ b/SoftdeletePlugin/config.json
@@ -3,7 +3,7 @@
     "plugin_name": "SoftdeleteData",
     "plugin_view_name": "データの論理削除",
     "description": "データを論理削除します",
-    "author": "Yui Hayama",
+    "author": "Y-Hayama",
     "version": "1.0.0",
     "plugin_type": "button",
     "event_triggers": "grid_menubutton",
