--- a/WorkablePlugin/config.json
+++ b/WorkablePlugin/config.json
@@ -3,7 +3,7 @@
     "uuid": "6ebd7df0-8cab-11ea-ab12-0800200c9a66",
     "plugin_view_name": "Sync Workable Candidate",
     "description": "Workableの候補者データを同期する",
-    "author": "Yui Hayama",
+    "author": "Y-Hayama",
     "version": "1.1.0",
     "plugin_type": "batch,button",
     "event_triggers": "grid_menubutton",
